# LiSAT

./: README.md  build.py  powerlifted.py
src/search/: CMakeLists.txt  action_schema.h  main.cc  object.h  options.h
src/search/heuristics/: heuristic.h  heuristic_factory.cc  liftedRP.cpp  liftedRP.h  sat_encoder.cpp  sat_encoder.h
src/search/lifted_heuristic/rules/: join.h
src/search/sat/: kissat.cpp  kissat.h  lifted_linear_sat.cpp  lifted_linear_sat.h  lifted_sat.cpp  lifted_sat.h  partially_grounded_sat.cpp  partially_grounded_sat.h  sat_encoder.cpp  sat_encoder.h  sat_termination.cpp  sat_termination.h
src/translator/: normalize.py
